# aumos-drift-detector

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.dev.yml  pyproject.toml
.github/workflows/: ci.yml
src/aumos_drift_detector/: __init__.py  main.py  settings.py
src/aumos_drift_detector/adapters/: __init__.py  alert_system.py  baseline_manager.py  cbpe.py  dle.py  embedding_client.py  feature_importance.py  html_reporter.py  kafka.py  llm_output_monitor.py  mmd.py  multivariate_drift.py  performance_monitor.py  plugin_sandbox.py  report_generator.py  repositories.py  retrain_trigger.py  trend_analyzer.py
src/aumos_drift_detector/adapters/concept_drift/: __init__.py  adwin.py  ddm.py
src/aumos_drift_detector/adapters/statistical_tests/: __init__.py  anderson_darling.py  chi_squared.py  hellinger.py  jensen_shannon.py  ks_test.py  psi.py  wasserstein.py
src/aumos_drift_detector/api/: __init__.py  router.py  schemas.py
src/aumos_drift_detector/core/: __init__.py  interfaces.py  models.py  services.py
tests/: __init__.py
tests/unit/: __init__.py
tests/unit/concept_drift/: __init__.py  test_adwin.py  test_ddm.py
tests/unit/core/: __init__.py  test_services.py
tests/unit/statistical_tests/: __init__.py  test_chi_squared.py  test_ks_test.py  test_psi.py
